Refine visual spacing for larger zodiac image

--- a/templates/scene.html
+++ b/templates/scene.html
@@ -292,7 +292,8 @@
            ===================== */
         #text-container {
             position: absolute;
-            top: 900px;
+            top: 980px;
+            /* Moved down for better spacing */
             left: 50%;
             transform: translateX(-50%);
             width: 950px;
