fix: audio to generic western, robust image lookup, improved layout spacing

--- a/templates/scene.html
+++ b/templates/scene.html
@@ -215,7 +215,8 @@
            ===================== */
         #zodiac-container {
             position: absolute;
-            top: 200px;
+            top: 280px;
+            /* Moved DOWN for spacing */
             left: 50%;
             transform: translateX(-50%);
             width: 500px;
@@ -296,7 +297,7 @@
            ===================== */
         #text-container {
             position: absolute;
-            top: 1100px;
+            top: 1150px;
             /* Moved DOWN to fix overlap with centered zodiac ring */
             left: 50%;
             transform: translateX(-50%);
